# wfs

./: .dockerignore  .env.example  .envrc  .gitignore  Dockerfile  README.md  justfile  package.json  pyproject.toml  wrangler.jsonc
.github/workflows/: ci.yml  deploy.yml
src/wfs/: __init__.py  config.py  main.py
src/wfs/controllers/: objects.py
src/wfs/core/: storage.py
src/wfs/models/: schemas.py
src/worker/: index.js
tests/: conftest.py  test_health.py
